fixed title spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,6 +23,10 @@ details p {
     text-align: justify;
 }
 
+h4 {
+    margin-top: 15px;
+}
+
 .author-name {
     font-variant: small-caps;
 }
